# rust-raytrace

./: Cargo.toml  build.sh  index.css  index.html  package-lock.json  package.json  rust_raytrace.d.ts  rust_raytrace.js  rust_raytrace_bg.wasm  rust_raytrace_bg.wasm.d.ts  tsconfig.json  vite.config.js  worker.js
front-src/: button.ts  concurrency.ts  index.ts  load-wasm.ts  state.ts  vite-env.d.ts
src/: camera.rs  lib.rs  ray.rs  raycaster.rs  scene.rs
src/element/: sphere.rs
src/material/: mod.rs  surface_type.rs
